<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/program"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/version"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/versionVal"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/author"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/authorVal"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/site"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/siteurl"
				android:autoLink="all"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_margin="2dp"
				android:layout_weight="1"
				android:textSize="17dp" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/mail"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="@android:color/black"
				android:layout_margin="2dp"
				android:layout_weight="1" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/mailVal"
				android:autoLink="all"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_margin="2dp"
				android:layout_weight="1"
				android:textSize="14dp" />

		</LinearLayout>


		<ImageView
			android:id="@+id/imageView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/avatar"
			android:layout_gravity="center"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp" />

		<Button
			android:layout_margin="2dip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/feedback"
			android:onClick="feedbackClick" />

	</LinearLayout>

</ScrollView>
